--- a/style.css
+++ b/style.css
@@ -47,3 +47,27 @@ header {
   list-style: inside;
   text-align: center;
 }
+
+.container-inicial {
+  display: flex;
+  margin: 15px 0;
+  justify-content: center;
+  padding: 15px;
+}
+
+label {
+  font-size: 1.2rem;
+}
+
+section {
+  margin-top: 30px;
+  border: 2px solid black;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+#chave {
+  margin-bottom: 20px;
+}
