--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 body {
   background-color: #aa8c39;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100%;
 }
 
 header {
@@ -70,4 +73,17 @@ section {
 
 #chave {
   margin-bottom: 20px;
+}
+
+#btn {
+  padding: 10px;
+}
+
+footer {
+  text-align: center;
+}
+
+.msg {
+  height: 150px;
+  width: 300px;
 }
